# vector-benchmark

./: .gitignore  README.md  README.zh-CN.md  build_nuitka.sh  build_nuitka_arm.sh
benchmark/: .gitignore  dataset.py  pyproject.toml  requirements.txt  run.py
benchmark/bash-test/: clickhouse-benchmark-results.csv  clickhouse-benchmark.sh  generate-sql-files.sh
benchmark/benchmark/: __init__.py  cli_output.py  config_read.py  dataset.py  dataset_config.py
benchmark/configurations/: clickhouse-hnsw.json  myscale-hnsw-laion-768-1m-ip.json  myscale-hnsw-laion-768-1m-ip.json.query_cache  myscale-hnsw-laion-768-1m-ip.json.query_plan_cache  pgvector-hnsw-laion-768-1m-ip.json
benchmark/configurations/templates/: myscale-hnsw-laion-768-5m-ip.json  myscale-mstg-hybrid-quora-mini-dev.json  myscale-mstg-laion-768-1m-ip.json  myscale-text-quora-mini-dev.json  pgvector-hnsw-laion-768-1m-ip.json
benchmark/dataset_reader/: ann_compound_reader.py  ann_h5_reader.py  base_reader.py  gz_tsv_reader.py  utils.py
benchmark/datasets/: datasets.json
benchmark/docs/: dataset.md
benchmark/engine/base_client/: client.py  client.py.query_cache  client.py.query_plan_cache  search.py  upload.py  utils.py
benchmark/engine/clients/: client_factory.py
benchmark/engine/clients/clickhouse/: __init__.py  config.py  configure.py  parser.py  search.py  upload.py
benchmark/engine/clients/myscale/: config.py  configure.py  search.py  search.py.query_cache  search.py.query_plan_cache  upload.py
benchmark/engine/clients/pgvector/: config.py  configure.py  search.py  upload.py
