[tool.poetry]
name = "myscale-bench"
version = "0.1.0"
description = ""
authors = ["Kacper Łukawski <kacper.lukawski@qdrant.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
clickhouse-connect = "^0.9.2"
clickhouse-driver = "^0.2.10"
h5py = "^3.15.1"
numpy = "^2.2.5"
tqdm = "^4.67.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"